# 121-spacetime-crawler4py

./: README.md  config.ini  pyproject.toml  raw_stats.pkl  scraper.py
crawler/: __init__.py  crawler.py  data_collector.py  frontier.py  misc.py  scraper.py  worker.py
run/: config.ini  launch.py
run/Logs-fullrun/: frontier.shelve
run/deploy/: view.py
run/deploy/run-1/: frontier.shelve  processed_stats.txt
run/deploy/run-2/: 20260210-114122.pkl  frontier.shelve  processed_stats.txt
run/old-logs/Logs/: 20260207-125359.pkl  20260207-130800.pkl
run/old-logs/Logs-fullrun/: 20260206-225705.pkl
utils/: __init__.py  config.py  download.py  misc.py  response.py  server_registration.py
