[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crawler", "utils"]

[project]
name = "125Crawler"
version = "0.1.0"
description = "A crawler for CS125"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "cbor",
    "requests",
    "bs4",
    "tqdm",
]